Изменена логика TaskManager - методы разбиты по типам задач. Добавлена система обработки ошибок через Exception. Обновлены тесты.
Удален Task Manager Status.

Готово к ревью.