@@ -7,14 +7,15 @@ import java.util.ArrayList;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private final List<Task> historyList = new ArrayList<>();
+    private final int historyListMaxSize = 10;
 
     public List<Task> getHistory() {
         return new ArrayList<>(historyList);
     }
 
     public void addHistory(Task task) {
-        if (historyList.size() == 10) {
-            historyList.remove(0);
+        if (historyList.size() == historyListMaxSize) {
+            historyList.removeFirst();
         }
         historyList.add(task);
     }
